--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.28",
+    "graphql": "0.12.3",
+    "graphql-tag": "^2.10.1",
     "react": "^16.1.0",
+    "react-apollo": "^2.4.1",
     "react-dom": "^16.1.0",
-    "react-scripts": "1.0.17",
-    "spotify-web-api-js": "^0.22.1"
+    "react-scripts": "1.0.17"
   },
   "scripts": {
     "start": "react-scripts start",
