Groundwork for auth multi user

--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -8,5 +8,8 @@
     "express": "~4.0.0",
     "querystring": "~0.2.0",
     "request": "~2.34.0"
+  },
+  "scripts": {
+    "start": "nodemon authorization_code/app.js"
   }
 }
