--- a/ops/package.json
+++ b/ops/package.json
@@ -14,7 +14,7 @@
     "graphql": "^14.1.1",
     "koa": "^2.6.2",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.4.7",
+    "mongoose": "5.4.7",
     "node-cron": "^2.0.3",
     "nodemon": "^1.18.9",
     "spotify-web-api-node": "4.0.0"
