--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "apollo-boost": "^0.1.28",
     "graphql": "0.12.3",
     "graphql-tag": "^2.10.1",
