--- a/grqphql/package.json
+++ b/grqphql/package.json
@@ -16,6 +16,8 @@
     "koa": "^2.6.2",
     "koa-logger": "^3.2.0",
     "mongoose": "^5.4.7",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "request": "^2.88.0",
+    "request-promise-native": "^1.0.7"
   }
 }
