--- a/auth-server/authorization_code/.gitignore
+++ b/auth-server/authorization_code/.gitignore
@@ -1,3 +1,4 @@
+node_modules/
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
 # dependencies
@@ -15,8 +16,11 @@
 .env.development.local
 .env.test.local
 .env.production.local
-.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+*ignore.jsx
+
+.env
