--- a/auth-server/package.json
+++ b/auth-server/package.json
@@ -5,6 +5,7 @@
   "version": "0.0.1",
   "dependencies": {
     "cookie-parser": "^1.4.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "querystring": "~0.2.0",
     "request": "~2.34.0"
