--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "1.0.17",
+    "spotify-uri": "^2.1.0",
     "spotify-web-api-js": "^1.5.0"
   },
   "scripts": {
